--- a/src/2-form.html
+++ b/src/2-form.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
 
-
+    <link rel="stylesheet" href="./css/form.css">
 </head>
 
 <body>
@@ -15,12 +15,12 @@
         <a href="./index.html">Go back</a>
 
         <form class="feedback-form" autocomplete="off">
-            <label>
+            <label class="label-email">
                 Email
                 <input type="email" name="email" autofocus />
             </label>
 
-            <label>
+            <label class="label-message">
                 Message
                 <textarea name="message" rows="8"></textarea>
             </label>
